--- a/styles/uvod.css
+++ b/styles/uvod.css
@@ -1,5 +1,5 @@
 body {
-    background-color: white;
+    background-color:beige;
     /*
     margin: 0;
     padding: 0;
@@ -16,4 +16,9 @@ body {
     font-family: "Bungee Tint", sans-serif;
     /*font-weight: 400;*/
     font-style: normal;
+}
+
+h1{
+    color:rgb(242, 151, 31);
+    font-size: 8em;
 }
